# proposal_genie

./: README.md  pyproject.toml
src/proposal_genie/: crew.py  main.py
